[package]
name = "schnooty"
version = "0.1.3"
authors = ["Mate Antunovic <mate@schnooty.com>"]
edition = "2018"

[dependencies]
openapi_client = { path = "../api/rust" }
clap = "3.0.0-beta.2"
futures = "0.3.5"
serde = { version = "^1.0.119", features = ["derive"] }
serde_json = "^1.0.41"
chrono = "0.4"
log = "0.4.6"
sysinfo = "0.16.3"
hyper-tls = "0.3.2"
toml = "0.5.3"
env_logger = "*"
rand = "0.7.3"
actix = "0.12.0"
actix-rt = "2.3.0"
test-logger = "0.1.0"
num_cpus = "1.13.0"
hostname = "^0.3"
lettre = "0.9.5"
lazy_static = "1.4.0"
native-tls = "0.2.6"
lettre_email = "0.9.4"
redis = "0.21.0"
serde_yaml = "0.8.13"
async-std = "1.10.0"
async-native-tls = "0.4.0"
base64 = "0.13.0"
reqwest = "0.11.7"
async-trait = "0.1.51"
